tests/fixtures/invalid/list_int.py
# Cannot call list() with Int
x = list(1)
